--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -9,7 +9,7 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
 # Der Hostname des Eureka Servers, hier auf 'localhost' gesetzt.
-eureka.instance.hostname=https://eureka-ng.akogare.de
+eureka.instance.hostname=eureka-ng.akogare.de
 
 # Das Intervall in Millisekunden, in dem der Eureka Server die Registrierung überprüft und abgelaufene Instanzen entfernt. Hier auf 30000 ms (30 Sekunden) gesetzt.
 eureka.server.eviction-interval-timer-in-ms=30000
